--- a/Msafe/MSafe/res/layout/activity_runbishclear.xml
+++ b/Msafe/MSafe/res/layout/activity_runbishclear.xml
@@ -21,11 +21,44 @@
             android:textColor="@color/white_textcolor"
             android:textSize="@dimen/textsize_mainactiviy_top" />
 
-        <org.com.lix_.plugin.AutodrawCircleView
-            android:id="@+id/circle_target"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:stokeSize="10dp" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent" >
+
+            <org.com.lix_.plugin.AutodrawCircleView
+                android:id="@+id/circle_target"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:stokeSize="10dp" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:text="382M"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textsize_circle_cache" />
+
+            <TextView
+                android:id="@+id/rubbish_text_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:paddingBottom="@dimen/padding_list"
+                android:layout_centerHorizontal="true"
+                android:text="建议清理"
+                android:textColor="@color/white" />
+
+            <TextView
+                  android:id="@+id/rubbish_text_2"
+                  android:layout_above="@id/rubbish_text_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textSize="@dimen/textsize_breathecircle"
+                android:text="正在扫描"
+                android:textColor="@color/white" />
+        </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
@@ -69,9 +102,9 @@
             android:visibility="gone" />
 
         <org.com.lix_.plugin.DebugView
-            android:background="#b0000000"
             android:layout_width="fill_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#b0000000" />
     </RelativeLayout>
 
 </LinearLayout>
