yeah ,i'm ok to save quick and hurry ,then i go away

--- a/Msafe/MSafe/res/values/colors.xml
+++ b/Msafe/MSafe/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="rubbishclear_bg">#aaf49c</color>
     <color name="radar_outcircle_color">#D1FFD4</color>
     <color name="radar_inner_color">#C9FFCC</color>
+    <color name="black">#000000</color>
+    <color name="tab_textcolor_selected">#81fa87</color>
 
 </resources>
