--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -10,6 +10,7 @@
      <dimen name="txtpaddingbottom_mainactivity_grid">10dp</dimen>
      <dimen name="stroke_circle">10dp</dimen>
      <dimen name="clear_btn_size">20dp</dimen>
+     <dimen name="padding_list2">20dp</dimen>
      <dimen name="padding_list">10dp</dimen>
      <dimen name="line_height">1dp</dimen>
 </resources>
