it's late for me ,so sleep

--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -13,4 +13,5 @@
      <dimen name="padding_list2">20dp</dimen>
      <dimen name="padding_list">10dp</dimen>
      <dimen name="line_height">1dp</dimen>
+     <dimen name="circle2line_stroke">2dp</dimen>
 </resources>
