--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -5,13 +5,15 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 	<!-- 系统字大小 -->
     <dimen name="textsize_mainactiviy_top">24sp</dimen>
-    <dimen name="textsize_breathecircle">20sp</dimen>
+    <dimen name="textsize_breathecircle">18sp</dimen>
      <dimen name="textsize_mainactivity_btn">10sp</dimen>
      <dimen name="txtpaddingbottom_mainactivity_grid">10dp</dimen>
      <dimen name="stroke_circle">10dp</dimen>
      <dimen name="clear_btn_size">20dp</dimen>
      <dimen name="padding_list2">20dp</dimen>
      <dimen name="padding_list">10dp</dimen>
+     <dimen name="padding_list3">7dp</dimen>
      <dimen name="line_height">1dp</dimen>
      <dimen name="circle2line_stroke">2dp</dimen>
+     <dimen name="divider_height">1dp</dimen>
 </resources>
