--- a/Msafe/MSafe/res/layout/activity_runbishclear.xml
+++ b/Msafe/MSafe/res/layout/activity_runbishclear.xml
@@ -32,14 +32,17 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@null"
+        android:background="@color/white"
         android:visibility="visible" >
+
+      
 
         <LinearLayout
             android:id="@+id/clear_btn_rubbish"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:background="@color/white"
             android:orientation="vertical"
             android:visibility="visible" >
 
@@ -49,11 +52,11 @@
                 android:background="@color/gray_mainactivity_btn_press" />
 
             <TextView
-                android:paddingTop="@dimen/padding_list"
-                android:paddingBottom="@dimen/padding_list"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:paddingBottom="@dimen/padding_list"
+                android:paddingTop="@dimen/padding_list"
                 android:text="@string/clear" />
         </LinearLayout>
 
@@ -61,10 +64,15 @@
             android:id="@+id/list_rubbishactivity"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:listSelector="@android:color/transparent"
             android:background="@color/white"
             android:divider="@null"
-            android:layoutAnimation="@anim/list_anim_layout" />
+            android:layoutAnimation="@anim/list_anim_layout"
+            android:listSelector="@android:color/transparent"
+            android:visibility="gone" />
+          <org.com.lix_.plugin.DebugView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@android:color/black" />
     </RelativeLayout>
 
 </LinearLayout>
