--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -1,12 +1,12 @@
 <resources>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">12dp</dimen>
+    <dimen name="activity_vertical_margin">13dp</dimen>
 	<!-- 系统字大小 -->
 	  <dimen name="textsize_circle_cache">35sp</dimen>
     <dimen name="textsize_mainactiviy_top">24sp</dimen>
-    <dimen name="textsize_breathecircle">18sp</dimen>
+    <dimen name="textsize_breathecircle">20dp</dimen>
      <dimen name="textsize_mainactivity_btn">10sp</dimen>
      <dimen name="txtpaddingbottom_mainactivity_grid">10dp</dimen>
      <dimen name="stroke_circle">10dp</dimen>
@@ -17,4 +17,5 @@
      <dimen name="line_height">1dp</dimen>
      <dimen name="circle2line_stroke">2dp</dimen>
      <dimen name="divider_height">1dp</dimen>
+     <dimen name="textsize_title_num">8dp</dimen>
 </resources>
