--- a/Msafe/MSafe/res/values/dimens.xml
+++ b/Msafe/MSafe/res/values/dimens.xml
@@ -17,5 +17,7 @@
      <dimen name="line_height">1dp</dimen>
      <dimen name="circle2line_stroke">2dp</dimen>
      <dimen name="divider_height">1dp</dimen>
-     <dimen name="textsize_title_num">8dp</dimen>
+     <dimen name="textsize_title_num">7dp</dimen>
+     <dimen name="gird_item_up_textsize">15dp</dimen>
+      <dimen name="gird_item_down_textsize">10dp</dimen>
 </resources>
