--- a/Msafe/MSafe/res/layout/grid_item_other_main.xml
+++ b/Msafe/MSafe/res/layout/grid_item_other_main.xml
@@ -27,6 +27,7 @@
 
     <TextView
         android:id="@+id/grid_item_size"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
