--- a/Msafe/MSafe/res/layout/apkadmin.xml
+++ b/Msafe/MSafe/res/layout/apkadmin.xml
@@ -81,6 +81,7 @@
 
         <View
             android:layout_width="fill_parent"
+            android:id="@+id/view_line"
             android:layout_height="@dimen/line_height"
             android:layout_below="@id/fileadmin_filesizetotalnum"
             android:background="@color/gray_mainactivity_btn_press"
