--- a/Msafe/MSafe/res/layout/virvusadmin.xml
+++ b/Msafe/MSafe/res/layout/virvusadmin.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
+                android:text="@string/virus_item_check0" />
         </LinearLayout>
 
         <LinearLayout
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
+                android:text="@string/virus_item_check1" />
         </LinearLayout>
 
         <LinearLayout
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
+                android:text="@string/virus_item_check2" />
         </LinearLayout>
 
         <LinearLayout
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:text="@string/grid_item_check0" />
+                android:text="@string/virus_item_check3" />
         </LinearLayout>
 
         <LinearLayout
