--- a/Msafe/MSafe/res/layout/tabchild_root_notification.xml
+++ b/Msafe/MSafe/res/layout/tabchild_root_notification.xml
@@ -6,10 +6,73 @@
     android:paddingLeft="@dimen/padding_list"
     android:paddingRight="@dimen/padding_list" >
 
-   <RelativeLayout  android:layout_width="fill_parent" android:layout_height="wrap_content">
-       <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
-           <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="悬浮窗"/>
-       </LinearLayout>
-   </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <RelativeLayout
+            android:id="@+id/child_tab_abovedig_title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_list"
+                android:text="@string/tab_child1_root_titles1" />
+
+            <TextView
+                android:id="@+id/num1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/title1"
+                android:layout_centerInParent="true"
+                android:background="@drawable/checked"
+                android:gravity="center"
+                android:text="5"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/child_tab_abovedig_title0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/child_tab_abovedig_title1" >
+
+            <TextView
+                android:id="@+id/title0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_list"
+                android:text="@string/tab_child1_root_titles0" />
+
+            <TextView
+                android:id="@+id/num0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/title0"
+                android:layout_centerInParent="true"
+                android:background="@drawable/checked"
+                android:gravity="center"
+                android:text="5"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/divider_height"
+        android:layout_marginTop="@dimen/padding_list"
+        android:background="@color/gray_mainactivity_btn_press" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" >
+    </ListView>
 
 </LinearLayout>
